# matrix-builder

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  REPO_TREE.md  SECURITY.md  TODO.md  VERSION  docker-compose.dev.yml  docker-compose.yml  index.html  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/app/: __init__.py  dependencies.py  landing.py  main.py
services/api/app/api/: __init__.py  audit.py  auth.py  blueprints.py  bundles.py  gitpilot.py  health.py  ideas.py  ingest.py  metrics.py  prompts.py  publications.py  router.py  standards.py  users.py  validation.py  workflow.py
services/api/app/core/: account_tokens.py  accounts.py  auth.py  config.py  email_auth.py  emailer.py  errors.py  feature_flags.py  google_auth.py  logging.py  passwords.py  rate_limits.py  request_id.py  security.py  security_headers.py  session.py
services/api/app/db/: base.py  engine.py  orm.py  repository.py  session.py
services/api/app/integrations/: agent_generator_adapter.py  drift_detection_adapter.py  email_client.py  github_client.py  gitpilot_client.py  matrix_definitions_client.py  matrixhub_client.py  object_storage.py
services/api/app/observability/: audit_events.py  metrics.py  telemetry.py  tracing.py
services/api/app/policies/: allowed_coders.py  bundle_expiration.py  (+3 more)
services/api/migrations/: env.py
services/api/scripts/: aiven_setup.sql  db_verify.sql  smoke_workflow.py
services/api/tests/: conftest.py  test_account_auth.py  test_agent_generator_adapter.py  test_ai_coder_prompts_batch6.py  test_blueprints.py  test_bundle_service_batch5.py  test_bundles.py  test_document_extractor.py  test_email_auth.py  test_gitpilot_metrics_batch14.py  test_gitpilot_pr_batch13.py  test_gitpilot_run_history_batch12.py  test_gitpilot_runs_batch9.py  test_gitpilot_security_batch11.py  test_gitpilot_validation_repair_batch10.py  test_google_auth.py  test_health.py  test_ideas.py  test_ingest.py  test_matrixhub_publication_batch7.py  test_prompts.py  test_publications.py  test_security_observability_batch8.py  test_standards.py  test_thumbnails_batch_c4.py  test_validation.py  test_validation_batch7.py
(+515 files in other folders)
