[project]
name = "matrix-builder"
version = "0.8.0b8"
description = "Public control plane for controlled AI-coder project generation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ruslan Magana" }]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.8",
  "pytest>=8.0",
  "httpx>=0.27",
  "jsonschema>=4.22",
  "ruff>=0.6",
  "mypy>=1.11",
  "opentelemetry-api>=1.28",
  "prometheus-client>=0.20",
]


# This repository is a multi-app workspace, not a single importable Python package.
# Keep package discovery explicit so `pip install .` can build metadata without
# trying to auto-package top-level workspace directories such as apps/ and infra/.
[tool.setuptools]
packages = []
py-modules = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "services/api/tests", "workers/tests"]
pythonpath = ["services/api", "."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["services/api", "workers", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
mypy_path = "services/api"
