[project]
name = "matrix-builder-api"
version = "0.11.0-batch.c2"
description = "FastAPI backend for Matrix Builder orchestration."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.8",
]

[project.optional-dependencies]
# Persistence (Batch C1): Supabase Postgres + Auth + Storage.
db = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pyjwt>=2.8",
]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6", "mypy>=1.11"]
